tests/errors/math_sqrt_negative_panics.ptt
use std/math

spark {
  yell(math.sqrt_floor(-1))
}
